# project-hub-template

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py
app/database/: __init__.py  sql_db.py
app/models/: __init__.py
migrations/: env.py
tests/: test_infra.py
